Search refinements and style cleanup Enable beginning of Facebook Graph Search-style UI Convert search refinement interface to native Bootstrap dropdown Fix mobile styling for new graph search UI Begin support for name: searching Extensive cleanup on styling in Plugins/Manage settings configuration page Enable default search value if no menu option is selected. Hide search form on mobile, closes #1507 Update tests for new app copy and Settings cleanup

--- a/webapp/assets/css/insights.css
+++ b/webapp/assets/css/insights.css
@@ -45,7 +45,33 @@ p {
   padding: 10px 15px 10px;
   text-decoration: none;
 }
-    
+
+#search-refine li > a:hover {
+    background-color : white;
+}
+
+#search-refine li > a i {
+    color : #00aeef;
+}
+
+#search-refine li > a:hover i {
+    color : white;
+}
+
+#search-refine .lead {
+    margin-top : 0px;
+    margin-right : 0px;
+    padding-left : 0px;
+}
+
+input#search-keywords {
+    background-color : transparent;
+}
+
+.searchterm {
+    font-weight: bold;
+}
+
 form .control-group {
     margin : 6px;
 }
@@ -383,15 +409,53 @@ span.formError {
   margin: 20px;
 }
 
+.help-block {
+    padding-left : 20px;
+    padding-bottom : 8px;
+}
+
 /* Plugin Settings */
 
 .plugin-info {
-  border-bottom: 1px solid #CACACA;
   margin-bottom: 20px;
+}
+
+#plugins.section th {
+    text-align: center;
+    border-top : none;
+}
+
+#plugins.section td.action-button {
+    text-align: center;
+    padding-top : 18px;
 }
 
 .add-account {
   margin-bottom: 20px;
+}
+
+input#plugin_options_flickr_api_key, input#plugin_options_bitly_api_key {
+    width : 300px;
+}
+
+input#plugin_options_facebook_api_secret {
+    width : 250px;
+}
+
+input#plugin_options_foursquare_client_id, input#plugin_options_foursquare_client_secret {
+    width : 450px;
+}
+
+input#plugin_options_gmaps_api_key {
+    width : 325px;
+}
+
+input#plugin_options_google_plus_client_id {
+    width : 300px;
+}
+
+input#plugin_options_oauth_consumer_secret {
+    width : 350px;
 }
 
 /* Sticky Footer */
@@ -429,6 +493,7 @@ body {
     padding-left: 0px;
     padding-right: 0px;
 }
+
 .alert, .alert.insight-item, .white-card, .row {
   margin-bottom: 6px;
 }
@@ -444,6 +509,18 @@ body {
 }
 .detail-btn .btn .btn-info {
     width : 30px;
+}
+
+.brand {
+    width: 100px;
+}
+
+form.navbar-search {
+    display : none;
+}
+
+#search-keywords {
+    width: 140px;
 }
  
 .label .icon-white,
